--- a/mongodb.yml
+++ b/mongodb.yml
@@ -4,7 +4,7 @@
     - name: Copy MongoDB Repo file
       ansible.builtin.copy:
         src: mongodb.repo
-        dest: etc/yum.repos.d/mongodb.repo
+        dest: /etc/yum.repos.d/mongodb.repo
     - name: Install MongoDB
       ansible.builtin.yum:
         name: mongodb-org
