--- a/catalogue.yml
+++ b/catalogue.yml
@@ -1,1 +1,9 @@
-- name:
+- name: Setup Catalogue component
+  hosts: all
+  beccome: yes
+  vars:
+    component: catalogue
+  tasks:
+    name: Load NodeJs
+    ansible.builtin.include_tasks:
+      file: nodejs.yml
