--- a/roles/common/tasks/nodejs.yml
+++ b/roles/common/tasks/nodejs.yml
@@ -1,11 +1,3 @@
-#app_presetup
-#
-#echo -e "${color} Install NodeJS Dependencies${nocolor}"
-#npm install  &>>$log_file
-#stat_check $?
-#
-#systemd_setup
-
 - name: Configuring NodeJS Repos
   ansible.builtin.shell: curl -sL https://rpm.nodesource.com/setup_lts.x | bash
 
@@ -13,4 +5,17 @@
   ansible.builtin.yum:
     name: nodejs
     state: installed
+
+- name: App Pre-requisites
+  ansible.builtin.inport_tasks:
+    file: app_presetup.yml
+
+- name: Load NodeJS Dependencies
+  ansible.builtin.shell: npm install
+  args: /app
+
+- name: systemd setup
+  ansible.builtin.inport_tasks:
+    file: systemd_setup.yml
+
 
