--- a/roles/common/tasks/mysql_schema_setup.yml
+++ b/roles/common/tasks/mysql_schema_setup.yml
@@ -4,4 +4,4 @@
     state: installed
 
 - name: Load Schema
-  ansible.builtin.shell: mysql -h  mysql-dev.navien.cloud -uroot -pRoboShop@1 </app/schema/{{ component }}.js
+  ansible.builtin.shell: mysql -h  mysql-dev.navien.cloud -uroot -pRoboShop@1 </app/schema/{{ component }}.sql
