--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -8,7 +8,7 @@
 
 - name: Install MySQL Community Server
   ansible.builtin.yum:
-    nmae: mysql-community-server
+    name: mysql-community-server
     state: installed
 
 - name: Start MySQL Service
