--- a/roles/common/tasks/python.yml
+++ b/roles/common/tasks/python.yml
@@ -1,15 +1,22 @@
-#echo -e "${color} Install Python ${nocolor}"
-#yum install python36 gcc python3-devel -y &>>/tmp/roboshop.log
-#stat_check $?
-#
-#app_presetup
-#
-#echo -e "${color} Install Application Dependencies ${nocolor}"
-#cd /app
-#pip3.6 install -r requirements.txt &>>/tmp/roboshop.log
-#stat_check $?
-#
-#systemd_setup
-
 - name: Install Python
-  ansible.builtin.
+  ansible.builtin.yum:
+    name:
+      - python36
+      - gcc
+      - python3-devel
+    state: installed
+
+- name: App pre-requisites
+  ansible_builtin.import_tasks:
+    file: app_presetup.yml
+
+- name: Install Python Dependencies
+  ansible.builtin.shell: pip3.6 install -r requirements.txt
+  args:
+    chdir: /app
+
+- name: Systemd setup
+  ansible_builtin.import_tasks:
+    file: systemd_setup.yml
+
+
