--- a/roles/redis/tasks/main.yml
+++ b/roles/redis/tasks/main.yml
@@ -26,7 +26,7 @@
 
 - name: Start Redis Service
   ansible.builtin.systemd:
-    state: restarted
     name: redis
-    enabled: true
+    state: restarted
+    enabled: yes
 
