--- a/roles/common/tasks/nodejs.yml
+++ b/roles/common/tasks/nodejs.yml
@@ -12,7 +12,8 @@
 
 - name: Load NodeJS Dependencies
   ansible.builtin.shell: npm install
-  args: /app
+  args:
+    chdir: /app
 
 - name: systemd setup
   ansible.builtin.inport_tasks:
