--- a/roles/common/tasks/mongo_schema_setup.yml
+++ b/roles/common/tasks/mongo_schema_setup.yml
@@ -9,4 +9,4 @@
     state: installed
 
 - name: Load Schema
-  ansible.builtin.shell: mongo --host mongodb-dev.navien.cloud </app/schema/{{ component }}.js
+  ansible.builtin.shell: mongo --host 18.206.221.40 </app/schema/{{ component }}.js
