--- a/roles/cart/files/cart.service
+++ b/roles/cart/files/cart.service
@@ -2,8 +2,8 @@
 Description = Cart Service
 [Service]
 User=roboshop
-Environment=REDIS_HOST=redis-dev.navien.cloud
-Environment=CATALOGUE_HOST=catalogue-dev.navien.cloud
+Environment=REDIS_HOST=redis-dev.navien.site
+Environment=CATALOGUE_HOST=catalogue-dev.navien.site
 Environment=CATALOGUE_PORT=8080
 ExecStart=/bin/node /app/server.js
 SyslogIdentifier=cart
