--- a/roles/common/tasks/mysql_schema_setup.yml
+++ b/roles/common/tasks/mysql_schema_setup.yml
@@ -5,3 +5,5 @@
 
 - name: Load Schema
   ansible.builtin.shell: mysql -h  mysql-dev.navien.cloud -uroot -pRoboShop@1 </app/schema/{{ component }}.sql
+
+- name: load
