--- a/roles/frontend/files/roboshop.conf
+++ b/roles/frontend/files/roboshop.conf
@@ -4,11 +4,11 @@ location /images/ {
   root   /usr/share/nginx/html;
   try_files $uri /images/placeholder.jpg;
 }
-location /api/catalogue/ { proxy_pass http://catalogue-dev.navien.cloud:8080/; }
-location /api/user/ { proxy_pass http://user-dev.navien.cloud:8080/; }
-location /api/cart/ { proxy_pass http://cart-dev.navien.cloud:8080/; }
-location /api/shipping/ { proxy_pass http://shipping-dev.navien.cloud:8080/; }
-location /api/payment/ { proxy_pass http://payment-dev.navien.cloud:8080/; }
+location /api/catalogue/ { proxy_pass http://catalogue-dev.navien.site:8080/; }
+location /api/user/ { proxy_pass http://user-dev.navien.site:8080/; }
+location /api/cart/ { proxy_pass http://cart-dev.navien.site:8080/; }
+location /api/shipping/ { proxy_pass http://shipping-dev.navien.site:8080/; }
+location /api/payment/ { proxy_pass http://payment-dev.navien.site:8080/; }
 
 location /health {
   stub_status on;
