--- a/roles/user/files/user.service
+++ b/roles/user/files/user.service
@@ -3,8 +3,8 @@ Description = User Service
 [Service]
 User=roboshop
 Environment=MONGO=true
-Environment=REDIS_HOST=redis-dev.navien.cloud
-Environment=MONGO_URL="mongodb://mongodb-dev.navien.cloud:27017/users"
+Environment=REDIS_HOST=redis-dev.navien.site
+Environment=MONGO_URL="mongodb://mongodb-dev.navien.site:27017/users"
 ExecStart=/bin/node /app/server.js
 SyslogIdentifier=user
 
