--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -3,10 +3,10 @@
     name: common
     tasks_from: nodejs
 
-- name: Load  schema setup
-  ansible.builtin.import_role:
-    name: common
-    tasks_from: mongo_schema_setup
+#- name: Load  schema setup
+#  ansible.builtin.import_role:
+#    name: common
+#    tasks_from: mongo_schema_setup
 
 
 
