--- a/roles/user/tasks/main.yml
+++ b/roles/user/tasks/main.yml
@@ -3,7 +3,7 @@
     name: common
     tasks_from: nodejs
 
-- name: Load  schema setup
-  ansible.builtin.import_role:
-    name: common
-    tasks_from: mongo_schema_setup
+#- name: Load  schema setup
+#  ansible.builtin.import_role:
+#    name: common
+#    tasks_from: mongo_schema_setup
