--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -1,46 +1,43 @@
-#- name: Copy MongoDB Repo file
-#  hosts: all
-#  become: yes
-#  tasks:
-#    ansible.builtin.copy:                           #Copy function to copy MongoDB  repository  file  to repository
-#    src: mongodb.repo
-#    dest: /etc/yum.repos.d/mongodb.repo
-#
-#- name: Install MongoDB
-#  ansible.builtin.yum:
-#      name: mongodb-org
-#      state: latest
-#
-#- name: Update MongoDB Listen Address
-#  ansible.builtin.replace:
-#        path: /etc/mongod.conf
-#        regexp: 127.0.0.1
-#        replace: 0.0.0.0
-#- name: Start MongoDb service
-#  ansible.builtin.systemd:
-#        state: restarted
-#        name: mongod
-#        enabled: true
-
-
 - name: Copy MongoDB Repo file
-  ansible.builtin.copy:
+  ansible.builtin.copy:                           #Copy function to copy MongoDB  repository  file  to repository
     src: mongodb.repo
     dest: /etc/yum.repos.d/mongodb.repo
 
 - name: Install MongoDB
   ansible.builtin.yum:
-    name: mongodb-org
-    state: latest
+      name: mongodb-org
+      state: latest
 
 - name: Update MongoDB Listen Address
   ansible.builtin.replace:
-    path: /etc/mongod.conf
-    regexp: '127.0.0.1'
-    replace: '0.0.0.0'
-
-- name: Start MongoDB Service
+        path: /etc/mongod.conf
+        regexp: 127.0.0.1
+        replace: 0.0.0.0
+- name: Start MongoDb service
   ansible.builtin.systemd:
-    state: restarted
-    name: mongod
-    enabled: true
+        state: restarted
+        name: mongod
+        enabled: true
+
+
+#- name: Copy MongoDB Repo file
+#  ansible.builtin.copy:
+#    src: mongodb.repo
+#    dest: /etc/yum.repos.d/mongodb.repo
+#
+#- name: Install MongoDB
+#  ansible.builtin.yum:
+#    name: mongodb-org
+#    state: latest
+#
+#- name: Update MongoDB Listen Address
+#  ansible.builtin.replace:
+#    path: /etc/mongod.conf
+#    regexp: '127.0.0.1'
+#    replace: '0.0.0.0'
+#
+#- name: Start MongoDB Service
+#  ansible.builtin.systemd:
+#    state: restarted
+#    name: mongod
+#    enabled: true
