--- a/roles/common/tasks/mysql_schema_setup.yml
+++ b/roles/common/tasks/mysql_schema_setup.yml
@@ -4,6 +4,6 @@
     state: installed
 
 - name: Load Schema
-  ansible.builtin.shell: mysql -h  mysql-dev.navien.cloud -uroot -pRoboShop@1 </app/schema/{{ component }}.sql
+  ansible.builtin.shell: mysql -h  mysql-dev.navien.site -uroot -pRoboShop@1 </app/schema/{{ component }}.sql
 
 
