--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -25,7 +25,7 @@
 
 - name: COpy MySQL REpo file
   ansible.builtin.copy:
-    src: mysql.repo
+    remote_src: mysql.repo
     dest: /etc/yum.repos.d/mysql.repo
 
 - name: Install MySQL Community Server
