--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -27,6 +27,7 @@
   ansible.builtin.copy:
     src: mysql.repo
     dest: /etc/yum.repos.d/mysql.repo
+    remote_src: yes
 
 - name: Install MySQL Community Server
   ansible.builtin.yum:
