--- a/roles/common/tasks/python.yml
+++ b/roles/common/tasks/python.yml
@@ -1,3 +1,28 @@
+#- name: Install Python
+#  ansible.builtin.yum:
+#    name:
+#      - python36
+#      - gcc
+#      - python3-devel
+#    state: installed
+#
+#- name: App pre-requisites
+#  ansible_builtin.import_tasks:
+#    file: app_presetup.yml
+#
+#- name: Install Python Dependencies
+#  ansible.builtin.shell: pip3.6 install -r requirements.txt
+#  args:
+#    chdir: /app
+#
+#- name: Systemd setup
+#  ansible_builtin.import_tasks:
+#    file: systemd_setup.yml
+
+
+
+
+
 - name: Install Python
   ansible.builtin.yum:
     name:
@@ -6,8 +31,8 @@
       - python3-devel
     state: installed
 
-- name: App pre-requisites
-  ansible_builtin.import_tasks:
+- name: App Pre-requisites
+  ansible.builtin.import_tasks:
     file: app_presetup.yml
 
 - name: Install Python Dependencies
@@ -15,8 +40,8 @@
   args:
     chdir: /app
 
-- name: Systemd setup
-  ansible_builtin.import_tasks:
+- name: SystemD Setup
+  ansible.builtin.import_tasks:
     file: systemd_setup.yml
 
 
