--- a/roles/common/tasks/systemd_setup.yml
+++ b/roles/common/tasks/systemd_setup.yml
@@ -1,24 +1,24 @@
-#- name: Copy SystemD File
-#  ansible.builtin.copy:
-#    src: "{{ component}}.service"
-#    dest: /etc/systemd/system/{{ component }}.service
-#
-#- name: Start {{ componenet }} Service
-#  ansible.builtin.systemd:
-#    name: "{{ component }}"
-#    state: restarted
-#    enabled: yes
-#    daemon-reload: yes
+- name: Copy SystemD File
+  ansible.builtin.copy:
+    src: "{{ component}}.service"
+    dest: /etc/systemd/system/{{ component }}.service
 
-
-- name: Copy SystemnD File
-  ansible.builtin.template:
-    src: "{{ component }}.service"
-    dest:  /etc/systemd/system/{{ component }}.service
-
-- name: Start {{ component }} Service
+- name: Start {{ componenet }} Service
   ansible.builtin.systemd:
     name: "{{ component }}"
     state: restarted
     enabled: yes
     daemon-reload: yes
+
+#
+#- name: Copy SystemnD File
+#  ansible.builtin.template:
+#    src: "{{ component }}.service"
+#    dest:  /etc/systemd/system/{{ component }}.service
+#
+#- name: Start {{ component }} Service
+#  ansible.builtin.systemd:
+#    name: "{{ component }}"
+#    state: restarted
+#    enabled: yes
+#    daemon-reload: yes
