--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -15,8 +15,7 @@
 
 - name: Download and Extract frontend Content
   ansible.builtin.unarchive:
-#    src: https://roboshop-artifacts.s3.amazonaws.com/frontend.zip
-    src: https://roboshop-artifacts.s3.amazonaws.com/frontend-v3.zip
+    src: https://roboshop-artifacts.s3.amazonaws.com/frontend.zip
     dest: /usr/share/nginx/html
     remote_src: yes
 - name: Copy Roboshop Configuration
