--- a/roles/frontend/templates/roboshop.conf
+++ b/roles/frontend/templates/roboshop.conf
@@ -4,12 +4,11 @@ location /images/ {
   root   /usr/share/nginx/html;
   try_files $uri /images/placeholder.jpg;
 }
-location /api/catalogue/ { proxy_pass http://catalogue-dev.navien.site:8080/; }
-location /api/user/ { proxy_pass http://user-dev.navien.site:8080/; }
-location /api/cart/ { proxy_pass http://cart-dev.navien.site:8080/; }
-location /api/shipping/ { proxy_pass http://shipping-dev.navien.site:8080/; }
-location /api/payment/ { proxy_pass http://payment-dev.navien.site:8080/; }
-
+location /api/catalogue/ { proxy_pass {{ lookup ('amazon.aws.ssm', 'roboshop.dev.catalogue_url', region='us-east-1')}};}
+location /api/user/ { proxy_pass {{ lookup ('amazon.aws.ssm', 'roboshop.dev.user_url', region='us-east-1')}};}
+location /api/cart/ { proxy_pass {{ lookup ('amazon.aws.ssm', 'roboshop.dev.cart_url', region='us-east-1')}};}
+location /api/shipping/ { proxy_pass {{ lookup ('amazon.aws.ssm', 'roboshop.dev.shipping_url', region='us-east-1')}};}
+location /api/payment/ { proxy_pass {{ lookup ('amazon.aws.ssm', 'roboshop.dev.payment_url', region='us-east-1')}};}
 location /health {
   stub_status on;
   access_log off;
