--- a/roles/cart/templates/cart.service
+++ b/roles/cart/templates/cart.service
@@ -2,9 +2,9 @@
 Description = Cart Service
 [Service]
 User=roboshop
-Environment=REDIS_HOST=redis-{{ env }}.navien.site
-Environment=CATALOGUE_HOST=catalogue-{{ env }}.navien.site
-Environment=CATALOGUE_PORT=8080
+Environment=REDIS_HOST={{ lookup ('amazon.aws.ssm', 'roboshop.{{env}}.cart.redis_host', region='us-east-1')}}
+Environment=CATALOGUE_HOST={{ lookup ('amazon.aws.ssm', 'roboshop.{{env}}.cart.catalogue_host', region='us-east-1')}}
+Environment=CATALOGUE_PORT={{ lookup ('amazon.aws.ssm', 'roboshop.{{env}}.cart.catalogue_port', region='us-east-1')}}
 ExecStart=/bin/node /app/server.js
 SyslogIdentifier=cart
 
