--- a/roles/payment/templates/payment.service
+++ b/roles/payment/templates/payment.service
@@ -4,13 +4,13 @@ Description=Payment Service
 [Service]
 User=root
 WorkingDirectory=/app
-Environment=CART_HOST={{ lookup ('amazon.aws.ssm', 'roboshop.{{env}}.payment.cart_host', region='us-east-1')}}
-Environment=CART_PORT={{ lookup ('amazon.aws.ssm', 'roboshop.{{env}}.payment.cart_port', region='us-east-1')}}
-Environment=USER_HOST={{ lookup ('amazon.aws.ssm', 'roboshop.{{env}}.payment.user_host', region='us-east-1')}}
-Environment=USER_PORT={{ lookup ('amazon.aws.ssm', 'roboshop.{{env}}.payment.user_port', region='us-east-1')}}
-Environment=AMQP_HOST={{ lookup ('amazon.aws.ssm', 'roboshop.{{env}}.amqp_host.cart_host', region='us-east-1')}}
-Environment=AMQP_USER={{ lookup ('amazon.aws.ssm', 'roboshop.{{env}}.amqp_user.cart_host', region='us-east-1')}}
-Environment=AMQP_PASS={{ lookup ('amazon.aws.ssm', 'roboshop.{{env}}.amqp_pass.cart_host', region='us-east-1')}}
+Environment=CART_HOST={{ lookup ('amazon.aws.aws_ssm', 'roboshop.{{env}}.payment.cart_host', region='us-east-1')}}
+Environment=CART_PORT={{ lookup ('amazon.aws.aws_ssm', 'roboshop.{{env}}.payment.cart_port', region='us-east-1')}}
+Environment=USER_HOST={{ lookup ('amazon.aws.aws_ssm', 'roboshop.{{env}}.payment.user_host', region='us-east-1')}}
+Environment=USER_PORT={{ lookup ('amazon.aws.aws_ssm', 'roboshop.{{env}}.payment.user_port', region='us-east-1')}}
+Environment=AMQP_HOST={{ lookup ('amazon.aws.aws_ssm', 'roboshop.{{env}}.amqp_host.cart_host', region='us-east-1')}}
+Environment=AMQP_USER={{ lookup ('amazon.aws.aws_ssm', 'roboshop.{{env}}.amqp_user.cart_host', region='us-east-1')}}
+Environment=AMQP_PASS={{ lookup ('amazon.aws.aws_ssm', 'roboshop.{{env}}.amqp_pass.cart_host', region='us-east-1')}}
 
 ExecStart=/usr/local/bin/uwsgi --ini payment.ini
 ExecStop=/bin/kill -9 $MAINPID
