--- a/roles/payment/templates/payment.service
+++ b/roles/payment/templates/payment.service
@@ -8,9 +8,9 @@ Environment=CART_HOST={{ lookup ('amazon.aws.aws_ssm', 'roboshop.{{env}}.payment
 Environment=CART_PORT={{ lookup ('amazon.aws.aws_ssm', 'roboshop.{{env}}.payment.cart_port', region='us-east-1')}}
 Environment=USER_HOST={{ lookup ('amazon.aws.aws_ssm', 'roboshop.{{env}}.payment.user_host', region='us-east-1')}}
 Environment=USER_PORT={{ lookup ('amazon.aws.aws_ssm', 'roboshop.{{env}}.payment.user_port', region='us-east-1')}}
-Environment=AMQP_HOST={{ lookup ('amazon.aws.aws_ssm', 'roboshop.{{env}}.amqp_host.cart_host', region='us-east-1')}}
-Environment=AMQP_USER={{ lookup ('amazon.aws.aws_ssm', 'roboshop.{{env}}.amqp_user.cart_user', region='us-east-1')}}
-Environment=AMQP_PASS={{ lookup ('amazon.aws.aws_ssm', 'roboshop.{{env}}.amqp_pass.cart_pass', region='us-east-1')}}
+Environment=AMQP_HOST={{ lookup ('amazon.aws.aws_ssm', 'roboshop.{{env}}.amqp_host.amqp_host', region='us-east-1')}}
+Environment=AMQP_USER={{ lookup ('amazon.aws.aws_ssm', 'roboshop.{{env}}.amqp_user.amqp_user', region='us-east-1')}}
+Environment=AMQP_PASS={{ lookup ('amazon.aws.aws_ssm', 'roboshop.{{env}}.amqp_pass.amqp_pass', region='us-east-1')}}
 
 ExecStart=/usr/local/bin/uwsgi --ini payment.ini
 ExecStop=/bin/kill -9 $MAINPID
