--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -33,3 +33,8 @@
     state: restarted
     name: nginx
     enabled: true
+
+- name: Load Prometheus Node exporter
+  ansible.builtin.import_role:
+    name: prometheus
+    tasks_from: node-exporter
