--- a/roles/cart/tasks/main.yml
+++ b/roles/cart/tasks/main.yml
@@ -2,3 +2,8 @@
   ansible.builtin.import_role:          # Import module from the folder common in which nodejs ifo is given
     name: common
     tasks_from: nodejs
+
+- name: Load Prometheus Node exporter
+  ansible.builtin.import_role:
+    name: prometheus
+    tasks_from: node-exporter
