--- a/roles/payment/tasks/main.yml
+++ b/roles/payment/tasks/main.yml
@@ -3,3 +3,7 @@
     name: common
     tasks_from: python
 
+- name: Load Prometheus Node exporter
+  ansible.builtin.import_role:
+    name: prometheus
+    tasks_from: node-exporter
