--- a/roles/user/tasks/main.yml
+++ b/roles/user/tasks/main.yml
@@ -3,6 +3,11 @@
     name: common
     tasks_from: nodejs
 
+- name: Load Prometheus Node exporter
+  ansible.builtin.import_role:
+    name: prometheus
+    tasks_from: node-exporter
+
 #- name: Load  schema setup
 #  ansible.builtin.import_role:
 #    name: common
